--- a/style/style.css
+++ b/style/style.css
@@ -8,9 +8,9 @@
 }
 */
 :root {
-  --main-white-color: #F7F2FF;
+  --main-white-color: #f7f2ff;
   /*основной "белый" цвет, используется почти во всех текстах*/
-  --article-text-color: #6E5E83;
+  --article-text-color: #6e5e83;
   /* цвет для абзацев статей, описаний услуг и мелких подзаголовков*/
 }
 
@@ -25,13 +25,12 @@
 }
 */
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   /*font-weight: 500;*/
-  src: local('Inter'),
-    url('/fonts/Inter/Inter-Medium.woff2') format('woff2'),
-    url('/fonts/Inter/Inter-Medium.woff') format('woff'),
-    url('/fonts/Inter/Inter-Medium.ttf') format('ttf'),
-    url('/fonts/Inter/Inter-Medium.eot') format('eot');
+  src: local("Inter"), url("/fonts/Inter/Inter-Medium.woff2") format("woff2"),
+    url("/fonts/Inter/Inter-Medium.woff") format("woff"),
+    url("/fonts/Inter/Inter-Medium.ttf") format("ttf"),
+    url("/fonts/Inter/Inter-Medium.eot") format("eot");
 }
 
 /*@font-face {
@@ -45,13 +44,13 @@
 }
 */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   /*font-weight: 500;*/
-  src: local('Open Sans'),
-    url('/fonts/Open_Sans/OpenSans-Regular.woff2') format('woff2'),
-    url('/fonts/Open_Sans/OpenSans-Regular.woff') format('woff'),
-    url('/fonts/Open_Sans/OpenSans-Regular.ttf') format('ttf'),
-    url('/fonts/Open_Sans/OpenSans-Regular.eot') format('eot');
+  src: local("Open Sans"),
+    url("/fonts/Open_Sans/OpenSans-Regular.woff2") format("woff2"),
+    url("/fonts/Open_Sans/OpenSans-Regular.woff") format("woff"),
+    url("/fonts/Open_Sans/OpenSans-Regular.ttf") format("ttf"),
+    url("/fonts/Open_Sans/OpenSans-Regular.eot") format("eot");
 }
 
 /*@font-face {
@@ -156,7 +155,7 @@ body {
 }
 
 ._container {
-  width:90vw;
+  width: 90vw;
   margin: 0 auto;
   max-width: 1138px;
   /* padding: 0 15px; */
@@ -182,6 +181,7 @@ body {
   display: flex;
   min-height: 68px;
   align-items: center;
+  justify-content: space-between;
 }
 
 ._container {
@@ -204,14 +204,14 @@ body {
 }
 .menu__link {
   display: flex;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   align-items: center;
 }
 .header__logo {
@@ -224,7 +224,7 @@ body {
 .header__location {
   display: flex;
   gap: 10px;
-  border-right: 1px solid #3f3354;
+  /* border-right: 1px solid #3f3354; */
   align-items: center;
 }
 .header__location_img {
@@ -237,8 +237,12 @@ body {
   line-height: 19px;
   text-align: right;
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   padding-right: 20px;
+}
+.header__hrVert {
+  border-left: 1px solid #3f3354;
+  min-height: 68px;
 }
 .header__contact {
   display: flex;
@@ -255,7 +259,7 @@ body {
   line-height: 19px;
   text-align: right;
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
 }
 .header_contact_href {
   font-family: "Inter";
@@ -316,7 +320,7 @@ body {
   line-height: 135%;
   text-transform: uppercase;
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   /* max-width: 580px; */
   /* border: 1px solid black; */
 }
@@ -329,8 +333,8 @@ body {
   justify-content: space-between;
 }
 .main-subtitle__item {
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -338,14 +342,14 @@ body {
   /* identical to box height */
   /* border: 1px solid black; */
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
 }
 .main-button {
   margin-bottom: 197px;
 }
 .main-button_href {
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -355,7 +359,7 @@ body {
   text-align: center;
 
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
 
   border: 1px solid #f7f2ff;
   border-radius: 5px;
@@ -413,8 +417,8 @@ body {
   margin-top: -71px;
 }
 .main-image__text_title {
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 500;
   font-size: 49.2144px;
@@ -426,7 +430,7 @@ body {
   text-transform: uppercase;
 
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   /* border: 1px solid black; */
   padding-top: 90px;
   padding-bottom: 30px;
@@ -434,15 +438,15 @@ body {
   /* transform: rotate(-30deg); */
 }
 .main-image__text_subtitle {
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
 
   color: var(--article-text-color);
-    /*color: #6e5e83;*/
+  /*color: #6e5e83;*/
   display: flex;
   justify-content: center;
   /* border: 1px solid black; */
@@ -549,8 +553,8 @@ body {
   margin: 103px 0 3px 0;
 }
 .toplend {
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: Medium;
   font-size: 14px;
   line-height: 21px;
@@ -575,7 +579,7 @@ body {
 }
 .services-block__text {
   padding: 50px 0 55px 34px;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-size: 18px;
   line-height: 22px;
   color: #ffffff;
@@ -638,7 +642,7 @@ body {
   line-height: 22px;
   line-height: 135%;
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
 }
 .choice-block__list {
   /* border: 1px solid black; */
@@ -659,8 +663,8 @@ body {
 }
 
 .choice-block__href {
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -672,7 +676,7 @@ body {
   text-align: center;
 
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
 }
 .choice-block__img {
 }
@@ -727,11 +731,12 @@ body {
   margin-bottom: 70px;
 }
 .reviews-block__slide {
-  max-width: 1138px;
+  max-width: 657px;
   min-height: 308px;
   box-shadow: inset 0px -1px 3px #573c7a;
   border-radius: 5px;
   display: flex;
+  margin: 0 auto;
   flex-direction: column;
 }
 .reviews-slide__text1 {
@@ -744,7 +749,7 @@ body {
   /* or 22px */
 
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
 }
 .reviews-slide__text2 {
   font-family: "Inter";
@@ -767,7 +772,7 @@ body {
   /* identical to box height, or 19px */
 
   color: var(--article-text-color);
-    /*color: #6e5e83;*/
+  /*color: #6e5e83;*/
   margin-left: 51px;
 }
 
@@ -805,7 +810,7 @@ body {
   text-align: center;
 
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   max-width: 446px;
   margin-bottom: 44px;
 }
@@ -815,8 +820,8 @@ body {
   margin-bottom: 54px;
 }
 .service-selection__href {
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -826,7 +831,7 @@ body {
   text-align: center;
 
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   padding: 11px 50px;
   border: 1px solid #f7f2ff;
   border-radius: 5px;
@@ -873,7 +878,7 @@ body {
 .articles__title {
 }
 .articles__title_h3 {
-  font-family: 'Inter';
+  font-family: "Inter";
   /*font-style: normal;*/
   font-weight: 600;
   font-size: 16px;
@@ -882,7 +887,7 @@ body {
   padding: 20px 0 5px 23px;
 }
 .articles__text {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-weight: 400;
   font-size: 14px;
   color: var(--article-text-color);
@@ -895,8 +900,8 @@ body {
   padding: 12px 62px;
 }
 .useful-articles__href {
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -906,7 +911,7 @@ body {
   text-align: center;
 
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   /* padding: 12px 62px; */
 }
 /*------------------------------------------------------------------------------------------------*/
@@ -952,7 +957,7 @@ body {
   line-height: 21px;
   /* identical to box height, or 117% */
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   padding: 20px 0 20px 23px;
 }
 .question__img {
@@ -965,7 +970,7 @@ body {
 /*----------------------------------------------------page-header------------------------------------*/
 .page-header {
   color: var(--main-white-color);
-  font-family: 'Inter';
+  font-family: "Inter";
   margin-bottom: 48px;
 }
 
@@ -980,11 +985,10 @@ body {
   font-weight: 500;
 }
 
-
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------category-list----------------------------------*/
-.services-block__grid .services-block__item .services-block__text{
-  padding: 41px 0px 42px 34px
+.services-block__grid .services-block__item .services-block__text {
+  padding: 41px 0px 42px 34px;
 }
 
 .services-block__grid {
@@ -994,11 +998,11 @@ body {
 }
 
 .category-list_service-selection {
-  margin: 70px 0px
+  margin: 70px 0px;
 }
 
 .category-list_description {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-weight: 400;
   font-size: 16px;
   color: var(--article-text-color);
@@ -1056,7 +1060,7 @@ body {
 }
 
 .page__blog__grid .articles__item {
-  width: 100%
+  width: 100%;
 }
 
 .more-articles-button {
@@ -1074,13 +1078,13 @@ body {
   font-size: 16px;
   padding: 10px;
   color: var(--main-white-color);
-  border: 1px solid #F7F2FF;
-  border-radius: 5px
+  border: 1px solid #f7f2ff;
+  border-radius: 5px;
 }
 
-.btn a{
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+.btn a {
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
 }
 
 /*---------------------------------------------------------------------------------------------------*/
@@ -1094,11 +1098,11 @@ body {
 }
 
 .blog-article_text {
-  font-family: 'Inter';
+  font-family: "Inter";
   color: var(--article-text-color);
   font-weight: 400;
   font-size: 16px;
-  margin-bottom: 70px
+  margin-bottom: 70px;
 }
 
 .blog-article_text h2,
@@ -1156,7 +1160,7 @@ body {
   /* or 19px */
 
   color: var(--article-text-color);
-    /*color: #6e5e83;*/
+  /*color: #6e5e83;*/
   padding-bottom: 57px;
 }
 .footer__navigation {
@@ -1174,14 +1178,14 @@ body {
 }
 .menu-footer__link {
   display: flex;
-  font-family: 'Open Sans';
-    /*font-family: "Poppins";*/
+  font-family: "Open Sans";
+  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
   align-items: center;
 }
 .footer__contact {
@@ -1201,7 +1205,7 @@ body {
   line-height: 19px;
 
   color: var(--main-white-color);
-    /*color: #f7f2ff;*/
+  /*color: #f7f2ff;*/
 }
 .footer-contact__tel {
   text-align: right;
@@ -1213,7 +1217,7 @@ body {
   line-height: 17px;
 
   color: var(--article-text-color);
-    /*color: #6e5e83;*/
+  /*color: #6e5e83;*/
 }
 .footer-contact__email {
   text-align: right;
@@ -1223,5 +1227,5 @@ body {
   font-size: 14px;
   line-height: 17px;
   color: var(--article-text-color);
-    /*color: #6e5e83;*/
+  /*color: #6e5e83;*/
 }
