--- a/topland-template/main/static/css/style.css
+++ b/topland-template/main/static/css/style.css
@@ -580,7 +580,9 @@ body {
   flex-wrap: wrap;
 }
 .services-block__item {
+  width: 32.15%;
   display: flex;
+  flex-grow: 1;
   justify-content: space-between;
   min-height: 127px;
   background: #1f0c37;
