--- a/style/style.css
+++ b/style/style.css
@@ -155,12 +155,16 @@ body {
       rgba(73, 0, 107, 0.396) 0%,
       rgba(255, 31, 233, 0.4) 57.07%,
       rgba(222, 129, 255, 0.4) 100%
-    )
-    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    );
   filter: blur(100px);
   transform: rotate(-36.12deg);
 }
 .background-choice__left {
+  /* position: absolute;
+    width: 238.24px;
+    height: 429.21px;
+    left: 52.26px;
+    top: 3909.99px;*/
 }
 .background-choice__leftImg {
 }
@@ -598,7 +602,9 @@ body {
   flex-wrap: wrap;
 }
 .services-block__item {
+  width: 32.15%;
   display: flex;
+  flex-grow: 1;
   justify-content: space-between;
   min-height: 127px;
   background: #1f0c37;
