--- a/topland-template/main/static/css/style.css
+++ b/topland-template/main/static/css/style.css
@@ -76,32 +76,40 @@ body {
 }
 .background-main1 {
   position: absolute;
-    z-index: 4;
-    width: 975px;
-    height: 634.06px;
-    left: -35px;
-    top: 147px;
-    background: radial-gradient(58.88% 126.25% at 51.53% 47.82%, #5d21c0 0%, rgba(193, 17, 255, 0) 100%);
-    filter: blur(128px);
-    transform: rotate(42.7deg);
+  z-index: 4;
+  width: 975px;
+  height: 634.06px;
+  left: -500px;
+  top: 147px;
+  background: radial-gradient(
+    58.88% 126.25% at 51.53% 47.82%,
+    #5d21c0 0%,
+    rgba(193, 17, 255, 0) 100%
+  );
+  filter: blur(128px);
+  transform: rotate(42.7deg);
 }
 .background-main2 {
   position: absolute;
-    z-index: 5;
-    width: 407px;
-    height: 568.01px;
-    left: 355.44px;
-    top: 581px;
-    background: radial-gradient(58.88% 126.25% at 51.53% 47.82%, #aa75a5 0%, rgba(193, 17, 255, 0) 100%);
-    transform: rotate(33.87deg);
-    filter: blur(146px);
+  z-index: 5;
+  width: 407px;
+  height: 568.01px;
+  left: 255.44px;
+  top: 481px;
+  background: radial-gradient(
+    58.88% 126.25% at 51.53% 47.82%,
+    #aa75a5 0%,
+    rgba(193, 17, 255, 0) 100%
+  );
+  transform: rotate(33.87deg);
+  filter: blur(146px);
 }
 .background-main3 {
   position: absolute;
-  width: 1266.02px;
+  width: 700.02px;
   height: 568.01px;
-  left: 701px;
-  top: 836.11px;
+  left: 536px;
+  top: 500.11px;
 
   background: radial-gradient(
       58.88% 126.25% at 51.53% 47.82%,
@@ -118,8 +126,8 @@ body {
   position: absolute;
   width: 449.03px;
   height: 367.72px;
-  /* left: 244px; */
-  top: 3480.7px;
+  left: 70px;
+  /* top: 3218.7px; */
 
   background: radial-gradient(
       50.09% 124.66% at 65.27% 55.89%,
@@ -131,24 +139,32 @@ body {
   filter: blur(100px);
   transform: rotate(-36.12deg);
 }
-.background-reviews__Star1 {
+.background-reviews__triple-stars {
   position: absolute;
-  z-index: 20;
+  z-index: 40;
 }
-.background-reviews__Star2 {
+
+.background-choice {
   position: absolute;
-  z-index: 20;
-}
-.background-reviews__Star3 {
-  position: absolute;
-  z-index: 20;
+  width: 571.09px;
+  height: 397.36px;
+  left: 955px;
+
+  background: radial-gradient(
+    51.61% 115.36% at 67.24% 51.72%,
+    rgba(73, 0, 107, 0.396) 0%,
+    rgba(255, 31, 233, 0.4) 57.07%,
+    rgba(222, 129, 255, 0.4) 100%
+    );
+  filter: blur(100px);
+  transform: rotate(-36.12deg);
 }
 .background-choice__left {
-  position: absolute;
+ /* position: absolute;
   width: 238.24px;
   height: 429.21px;
   left: 52.26px;
-  top: 3909.99px;
+  top: 3909.99px;*/
 }
 .background-choice__leftImg {
 }
@@ -193,6 +209,7 @@ body {
   min-height: 68px;
   align-items: center;
   justify-content: space-between;
+  background: #1a0930;
 }
 
 ._container {
@@ -305,6 +322,7 @@ body {
 .page {
 }
 .page__main-block {
+  position: relative;
 }
 .main {
 }
@@ -548,6 +566,9 @@ body {
 /*---------------------------------------------------------------------------------------------*/
 /*----------------------------------------services---------------------------------------------*/
 .page__services-block {
+  position: relative;
+    background: #1a0930;
+    z-index: 25;
 }
 .services {
 }
@@ -558,6 +579,7 @@ body {
 .services-block__body {
 }
 .services-block__title_h2 {
+  padding-top: 127px;
   margin-bottom: 53px;
 }
 .services-block__subtitle {
@@ -623,6 +645,7 @@ body {
 /*-----------------------------------------------------------------------------------------------*/
 /*----------------------------------------------page__choice-block--------------------------------*/
 .page__choice-block {
+  position: relative;
   margin-top: 158px;
 }
 .choice {
@@ -692,6 +715,8 @@ body {
   /*color: #f7f2ff;*/
 }
 .choice-block__img {
+  position: relative;
+    z-index: 30;
 }
 /*-------------------------------------------------------------------------------------------*/
 /*--------------------------------------------------page__cases-block------------------------*/
@@ -723,6 +748,7 @@ body {
 /*---------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------page__reviews-block----------------------------*/
 .page__reviews-block {
+  position: relative;
 }
 .reviews {
 }
@@ -979,41 +1005,64 @@ body {
   padding-top: 23px;
   padding-right: 39px;
 } */
-.collapsible {
-  background-color: transparent;
-  color: rgb(255, 255, 255, 0.5);
-  cursor: pointer;
-  padding: 18px;
+
+.accordion__item {
+  float: left;
+  display: block;
   width: 100%;
-  border: none;
-  border-bottom: 1px solid #fff;
-  text-align: none;
-  outline: none;
-  font-size: 20px;
+  box-sizing: border-box;
+  font-family: "Open-sans", Arial, sans-serif;
 }
-.active,
-.collapsible:hover {
-  background-color: transparent;
-  color: rgb(255, 255, 255, 1);
+
+.accordion__item_header {
+  cursor: pointer;
+  margin: 0px 0px 10px 0px;
+  padding: 10px;
+  font-size: 22px;
+  font-weight: 400;
+  background: #2980b9;
+  color: #fff;
+  width: 100%;
+  border-radius: 3px;
+  box-sizing: border-box;
 }
-.collapsible:after {
-  content: "\002B";
-  color: white;
-  font-weight: bold;
+
+.accordion__item_header span {
   float: right;
-  margin-left: 5px;
+  font-size: 25px;
 }
-.active:after {
-  content: "\2212";
-  color: rgb(255, 255, 255, 1);
+
+.close .accordion__item_body {
+  height: 0px;
+  transition: height 1s ease-out;
+  transform: scaleY(0);
+  float: left;
+  display: block;
 }
-.content {
-  padding: 0 18px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  background-color: #ffffff;
+
+.open .accordion__item_body {
+  padding: 20px;
+  background-color: #f0f1f1;
+  border: 1px solid #ddd;
+  width: 100%;
+  margin: 0px 0px 10px 0px;
+  display: block;
+  transform: scaleY(1);
+  transform-origin: top;
+  transition: transform 0.4s ease;
+  box-sizing: border-box;
 }
+
+.open .accordion__item_header {
+  margin: 0px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  background-color: #073e63;
+  color: #cdd7d8;
+}
+
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------page-header------------------------------------*/
 .page-header {
